fix color of strong in cards in high contrast

--- a/_sass/themes/high-contrast/_extra.scss
+++ b/_sass/themes/high-contrast/_extra.scss
@@ -1,19 +1,25 @@
 
 .nav-main, .nav-main ul, .card, footer {
   a {
-    color: color("shades", "white");
+    color: color('shades', 'white');
+  }
+}
+
+.card-content {
+  strong {
+    color: color('shades', 'white');
   }
 }
 
 .dropdown-content li > a, .dropdown-content li > span {
-      color: color("shades", "white");
+      color: color('shades', 'white');
 }
 
 main {
   p,
   li{
     code {
-      color: color("shades", "white");
+      color: color('shades', 'white');
     }
   }
 }
